<resources>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum" translatable="false">
        Welcome!
    </string>
    <string name="title_activity_login">Authentication</string>
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_continue">Continue</string>
    <string name="action_sign_up">Sign up</string>
    <string name="loading">Loading</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username_digits">Se matrícula, deve conter de 3 a 7 dígitos</string>
    <string name="invalid_password_content_lowercase">Precisa conter Minúsculas</string>
    <string name="invalid_password_content_uppercase">Precisa conter Maiúsculas</string>
    <string name="invalid_password_content_numbers">Precisa conter Números</string>
    <string name="invalid_password_digits">Sua senha deve conter de 8 a 20 dígitos</string>
    <string name="action_login">Login</string>
    <string name="login_failed">Login has failed</string>
    <string name="invalid_email">E-mail is nor valid</string>
    <string name="invalid_username">Username is not valid</string>
    <string name="services">Services</string>
    <string name="title_activity_home">"Services Panel"</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Home Inspections</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="action_search">Search</string>
    <string name="action_download">Download</string>
    <string name="action_form">Executing Service</string>
    <string name="action_settings">Settings</string>
    <string name="action_upload">Upload</string>
    <string name="action_take_picture">Take Picture</string>
    <string name="empty_field">Empty</string>
    <string name="action_logout">Logout</string>
    <string name="login_remember_me">Remember-me</string>
    <string name="address">Address</string>
    <string name="service_order">Service Order</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="latest_records">Last records</string>
    <string name="balance">Balance</string>
    <string name="my_coils">My coils</string>
    <string name="action_register_usage">Save Usage</string>
    <string name="action_register_send">Send</string>
    <string name="action_register_receive">Receive</string>
    <string name="error_operation_has_failed">The operation has an unexpected fail</string>
    <string name="unities">unities</string>
    <string name="hints_receiver_key">Enter destin account key…</string>
    <string name="search">search</string>
    <string name="quantity">quantity</string>
    <string name="confirm">Confirm</string>
    <string name="optional_description">Description (optional)</string>
    <string name="confirmation">Confirmation</string>
    <string name="recipient">Recipient</string>
    <string name="sender">Sender</string>
    <string name="sender_account">Origin Account</string>
    <string name="recipient_account">Recipient Account</string>
    <string name="transference_to">Transfer to</string>
    <string name="coils">Coils</string>
    <string name="from">from</string>
    <string name="account">Account</string>
    <string name="user">User</string>
    <string name="cancel">Cancel</string>
    <string name="origin">origin</string>
    <string name="usage">Usage</string>
    <string name="transference">Transference</string>
    <string name="origin_account">Origin Account</string>
    <string name="description">Description</string>
    <string name="business_logic_has_broken">a business logic has broken</string>
</resources>