<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/cyan"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeActivity">

    <LinearLayout
        android:id="@+id/layout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_view_user"
                android:src="@mipmap/ic_launcher"
                android:layout_width="50dp"
                android:layout_height="50dp" />

            <TextView
                android:id="@+id/text_view_user_name"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:elevation="25dp"
                android:text="Hello World!"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="18sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/image_view_notifications"
            android:src="@android:drawable/ic_popup_reminder"
            android:layout_gravity="center"
            android:padding="2dp"
            android:layout_margin="5dp"
            android:layout_width="30dp"
            android:layout_height="30dp" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/layout_resume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:elevation="25dp"
        app:layout_constraintTop_toBottomOf="@id/layout_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/my_coils"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/text_view_saldo"
                android:padding="15dp"
                android:textSize="32sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textAlignment="textEnd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/button_use"
                    android:src="@drawable/ic_print"
                    android:text="@string/action_register_usage"
                    android:padding="15dp"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

                <ImageButton
                    android:id="@+id/button_send"
                    android:src="@drawable/ic_send"
                    android:text="@string/action_register_send"
                    android:padding="15dp"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:elevation="25dp"
        app:layout_constraintTop_toBottomOf="@id/layout_resume"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:text="@string/latest_records"
                android:textSize="18sp"
                android:paddingVertical="5dp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.cardview.widget.CardView
                android:backgroundTint="#aa6cb2eb"
                android:layout_width="match_parent"
                android:padding="1dp"
                android:layout_height="0dp"
                android:layout_weight="1">

                <include
                    android:id="@+id/included"
                    layout="@layout/progress_layout" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_lancamentos"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:padding="1dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/loading"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>